subida de pagina de error 404

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "proyecto-final",
   "version": "1.0.0",
-  "description": "",
+  "description": "Proyecto final de desarrollo web Coder House",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1","build-css": "node-sass --include-path scss scss/style.scss css/style.css",
